Fix missing jffi issue